# hook_web

./: .gitignore  Dockerfile  _cmd.py  conftest.py  docker-compose.test.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  sample.env
.github/workflows/: docker-image.yml  pytest.yml
hook_web/: app.py  callbacks.py  cli.py  config.py  extension.py  forms.py  messages.pot  wsgi.py
hook_web/controllers/: auth.py  public.py
hook_web/entities/: session.py
hook_web/libs/: discord_api.py  tasks.py
hook_web/templates/: 503.html  index.html
hook_web/translations/ja/LC_MESSAGES/: messages.po
hook_web/translations/zh/LC_MESSAGES/: messages.po
shell_scripts/: babel_extract.sh  babel_init.sh  babel_update.sh  flask_start.sh  service_start.sh
tests/: conftest.py
tests/test_entities/: test_session.py
tests/test_routes/: test_auth.py  test_public.py
