[tool.poetry]
name = "hook_web"
version = "0.0.2"
description = ""
authors = ["Elton Chou <plscd748@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"
Flask-Session = "^0.4.0"
Flask-Login = "^0.5.0"
Flask-Cors = "^3.0.10"
Flask-WTF = "^0.15.1"
Flask-SQLAlchemy = "^2.5.1"
WTForms = "^2.3.3"
Authlib = "^0.15.4"
loginpass = "^0.5"
gunicorn = {extras = ["gevent"], version = "^20.1.0"}
Flask-Babel = "^2.0.0"
redis = "^3.5.3"
python-dotenv = "^0.19.0"
click = "^8.0.3"
hook-tasks = {git = "https://github.com/FigureHook/hook_tasks", tag = "v0.0.3"}
figure-hook = {git = "https://github.com/FigureHook/figure_hook", rev = "v0.0.2"}

[tool.poetry.dev-dependencies]
coverage = "^5.5"
Faker = "^8.13.2"
pytest = "^6.2.5"
pytest-mock = "^3.6.1"
flake8 = "^3.9.2"
autopep8 = "^1.5.7"

[tool.poetry.scripts]
hookweb = "hook_web.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
